# aberration

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.txt  appveyor.yml  build_clang_linux.sh  build_clang_windows.sh  build_clang_winows.sh  clang_build_linux.sh  clang_build_windows.sh  gen_project_msvc.bat  premake5.lua
_misc/: ab_ctime.ctm  emacs.bat  shell.bat  shell.bat~
aberration/: AB.h  Aberration.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  ExtendedMath.cpp  FileFormats.h  ab.cpp
aberration/platform/: Common.cpp  Common.h  InputManager.cpp  InputManager.h  Memory.cpp  Memory.h  Platform.cpp  Window.h
aberration/platform/API/: GraphicsAPI.cpp  GraphicsAPI.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ab_graphics_api.h
aberration/platform/API/OpenGL/: OpenGL.cpp  OpenGL.h
aberration/platform/unix/: UnixConsole.cpp  UnixPlatform.cpp  X11Window.cpp
aberration/platform/windows/: Win32Common.cpp  Win32WGL.cpp  Win32WGL.h  Win32Window.cpp
aberration/render/: DebugRenderer.cpp  Render.cpp  RenderGroup.cpp  RenderGroup.h  Renderer.cpp  Renderer.h
aberration/renderer/: RenderGroup.cpp  Renderer.cpp  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
aberration/src/: ABFileFormats.h  ABHeader.cpp  ABHeader.h  Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Common.h  Types.h  ab.cpp  ab.h
aberration/src/platform/: Console.cpp  Console.h  Gamepad.h  Input.h  InputManager.cpp  InputManager.h  Memory.cpp  Memory.h  Platform.cpp  Platform.h  Window.cpp  Window.h
aberration/src/platform/API/OpenGL/: ABOpenGL.cpp  ABOpenGL.h
aberration/src/platform/unix/: UnixConsole.cpp  UnixMemory.cpp  UnixPlatform.cpp  X11Window.cpp
aberration/src/platform/windows/: Win32Console.cpp  Win32Memory.cpp  Win32Platform.cpp  Win32WGLContext.cpp  Win32WGLContext.h  Win32Window.cpp  Win32Window.h  WinConsole.cpp  WinMemory.cpp  WinPlatform.cpp
aberration/src/renderer/: Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
aberration/src/utils/: ABLog.h  DebugTools.cpp  DebugTools.h  ImageLoader.cpp  ImageLoader.h  Log.cpp  Log.h  Singleton.h  Singleton.inl  String.cpp  String.h
aberration/utils/: DebugTools.cpp  DebugTools.h  ImageLoader.cpp  ImageLoader.h  Log.cpp  Log.h  Utils.cpp
assets/: Cube.aab  CubeR.aab  Plane.aab  SourceCodePro.abf  banana upload.mtl  grass.aab  mesh.aab  moon.aab  test.aab  tree_foliage.aab  tree_trunk.aab
assets/barrels/: alignedBarrel.aab  barrel1.aab  barrel2.aab  barrel3.aab
assets/cube/: cube.mtl
assets/gizmos/: gizmos.blend  gizmos.mtl  xAxis.aab  xyManip.aab  xzManip.aab  yAxis.aab  yzManip.aab  zAxis.aab
assets/shaders/: ChunkFrag.glsl  ChunkVert.glsl  DebugInstancingFrag.glsl  DebugInstancingVert.glsl  LightFragment.glsl  LightVertex.glsl  LineFrag.glsl  LineVert.glsl  MeshFragment.glsl  MeshVertex.glsl  ShadowPassFrag.glsl  ShadowPassVert.glsl
assets/tree/: Cylinder.aab  Icosphere.003.aab  Source.txt  tree.mtl
deprecated/: Win32Window.cpp  Win32Window.h
game/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  DebugTools.cpp  DebugTools.h  ExtendedMath.cpp  ExtendedMath.h  FileFormats.h  Game.cpp  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  Sandbox.cpp  Sandbox.h  SimRegion.cpp  SimRegion.h  Tilemap.cpp  Tilemap.h  World.cpp  World.h
game/render/: ChunkMesher.cpp  ChunkMesher.h  DebugRenderer.cpp  DebugRenderer.h  RenderGroup.cpp  RenderGroup.h  Renderer.cpp  Renderer.h
hypermath/: hypermath.h
platform/: Application.cpp  Application.h  CodeLoader.h  Common.h  OpenGLLoader.cpp  OpenGLLoader.h  Platform.cpp  PlatformMemory.cpp  PlatformMemory.h  PlatformOpenGL.cpp  PlatformOpenGL.h  Window.h
platform/unix/: UnixCommon.cpp  X11Window.cpp
platform/windows/: Win32CodeLoader.cpp  Win32CodeLoader.h  Win32Common.cpp  Win32Platform.cpp  Win32Platform.h  Win32WGL.cpp  Win32WGL.h  Win32Window.cpp
project/: build.bat  build_clang_linux.sh  build_clang_windows.sh  gen_project_msvc.bat
sandbox/: CMakeLists.txt  Sandbox.cpp
sandbox/src/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  Sandbox.cpp
shared/: AB.h  Input.h  Log.cpp  Log.h  Memory.h  OpenGL.h  Shared.h
tools/AssetBuilder/: AssetBuilder.cpp  OBJLoader.cpp  OBJLoader.h  Utils.cpp
tools/FontPreprocessor/: ABFontPreprocessor.cpp  stb_truetype.h
